apps/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          # renovate: datasource=docker depName=linuxserver/qbittorrent versioning=docker
          image: linuxserver/qbittorrent:20.04.1@sha256:fc98c8af048936d0070dc5e5992feab08664f8a61a860d91be02f782f8721485
          ports:
            - containerPort: 8080
              name: webui
            - containerPort: 6881
              name: bittorrent
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: media
          persistentVolumeClaim:
            claimName: media
